# certbot_deployer_vsphere

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-make.txt  requirements.txt  setup.cfg  setup.py
.githooks/: pre-push
.github/workflows/: release.yaml  test_untagged_commit.yaml
certbot_deployer_vsphere/: __init__.py  __main__.py  meta.py
certbot_deployer_vsphere/_main/: __init__.py
certbot_deployer_vsphere/certbot_deployer_vsphere/: __init__.py
tests/: test_all.py
