[metadata]
author = IAS
author_email = network@ias.edu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = author = Certbot Deployer plugin for deploying web certificates to VSphere

long_description = file: README.md
long_description_content_type = text/markdown
name = certbot_deployer_vsphere
project_urls =
	Documentation = https://theias.github.io/certbot_deployer_vsphere/
	Bug Tracker = https://github.com/theias/certbot_deployer_vsphere/issues
	Source = https://github.com/theias/certbot_deployer_vsphere
url = https://github.com/theias/certbot_deployer_vsphere 
version = attr: certbot_deployer_vsphere.meta.__version__

[options]
install_requires =
	certbot_deployer>=2.0.3,<3.0.0
	pyOpenSSL>=24.2.1,<25.0.0
	requests>=2.32.3,<2.33.0
	vmware_vapi_runtime>=2.61.2,<3.0.0
	vmware_vcenter>=8.0.3.0,<9.0.0.0
packages = find:
package_dir =
	=./
python_requires = >=3.9
scripts =
	bin/certbot_deployer_vsphere

[options.packages.find]
where = ./
exclude = tests*

[options.entry_points]
console_scripts =
    certbot-deployer-vsphere = certbot_deployer_vsphere:main
    certbot_deployer_vsphere = certbot_deployer_vsphere:main
certbot_deployer.plugins =
    certbot-deployer-vsphere = certbot_deployer_vsphere.certbot_deployer_vsphere:VsphereDeployer
